--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.10.0",
+    "cors": "^2.8.5",
     "csv-parse": "^6.0.0",
     "express": "^5.1.0",
     "mongoose": "^8.16.3",
