Implement mutual funds API with pagination and stats endpoints; refactor model and add data fetching utilities

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^8.16.3",
     "node-cron": "^4.2.1",
     "nodemon": "^3.1.10",
+    "p-limit": "^6.2.0",
     "xlsx": "^0.18.5"
   }
 }
